tests/error/type_match/typename_mismatched_qualifier1.bz
// error: couldn't match the function call to the function
// note: function argument types are 'typename'
// note: candidate: 'function test1(T: *mut typename) -> void'
function test1(T: *mut typename);

function test()
{
	test1(*i32);
}
